Ontology Insert,Search endpoint build, ensured junit testcases working fine.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+#MongoDB Properties
+spring.data.mongodb.uri=mongodb://localhost:27017/otologylookuplocaldb
+spring.data.mongodb.auto-index-creation: true
+
+#App Info
+spring.application.name=Ontology Tools
+server.port=8080
+
+#Embeded API Properties
+ontologytools.remote.ols.api.endpoint=https://www.ebi.ac.uk/ols/api/ontologies
+ontologytools.remote.ols.api.enable=true
+
+
+#Ontology External File Storage path
+ontology.fileStorageRootPath = /var/ontology
+
+#Logging Config
+logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.file.name=${ontology.fileStorageRootPath}/log/ontology-log.log
 
